--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
     </dependency>
+    <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-tomcat</artifactId>
+    <scope>provided</scope>
+    </dependency>
 
     <!-- Servlet API for WAR deployment -->
     <dependency>
@@ -80,5 +85,7 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
+
+  
 
 </project>
